<resources>
    <string name="app_name">IOTIA</string>
<<<<<<< HEAD
    <string name="bottom_navigation_menu_match">Match</string>
    <string name="bottom_navigation_menu_profil">Profil</string>
    <string name="bottom_navigation_menu_stats">Stats</string>
=======
    <string name="title_activity_accueil">AccueilActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_stat">StatActivity</string>
    <string name="resultat">Victoire</string>
    <string name="joueur1">Tom</string>
    <string name="joueur2">Maxime</string>
    <string name="joueur1set1">6</string>
    <string name="joueur1set2">3</string>
    <string name="joueur1set3">7</string>
    <string name="joueur2set1">2</string>
    <string name="joueur2set2">6</string>
    <string name="joueur2set3">5</string>
>>>>>>> Manu
</resources>